<resources>
    <string name="app_name">Реши пример</string>
    <string name="textCount">Итого решено примеров</string>
    <string name="textNumberCount">0</string>
    <string name="textCorrect">Правильно</string>
    <string name="textNumberCorrect">0</string>
    <string name="textNotCorrect">Не правильно</string>
    <string name="textNumberNotCorrect">0</string>
    <string name="textPercent">0.00%</string>
    <string name="textFirstOperand">00</string>
    <string name="textSecondOperand">00</string>
    <string name="textOperator">+</string>
    <string name="textEqual">=</string>
    <string name="textCheck">Проверка</string>
    <string name="textStart">Старт</string>
</resources>